// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchResultList> should render correctly when no results found 1`] = `
.c2 {
  padding: 20px 16px 20px 32px;
  display: block;
  text-align: left;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  color: #666666;
}

.c0 {
  height: 252px;
  width: 328px;
  background: #FFFFFF;
  box-shadow: 0px 2px 6px 0px #29292940;
  border: 1px solid #E0E0E0;
  border-top: 1px solid #E0E0E0;
  border-radius: 0px;
  overflow: hidden;
  text-align: center;
}

.c1 {
  position: absolute;
  width: 100%;
  top: 100%;
  border: 1px solid #F1F1F1;
  box-sizing: border-box;
  height: auto;
  z-index: 100;
  box-shadow: 0px 2px 20px 0px #29292940;
  border-radius: 6px;
  margin-top: 8px;
}

<div
  className="c0 c1"
  data-test-id="CARD"
>
  <span
    className="c2"
  >
    We couldn't find any results for
     
    <strong>
      "mockValue"
    </strong>
  </span>
</div>
`;

exports[`<SearchResultList> should render correctly when search results found 1`] = `
.c0 {
  height: 252px;
  width: 328px;
  background: #FFFFFF;
  box-shadow: 0px 2px 6px 0px #29292940;
  border: 1px solid #E0E0E0;
  border-top: 1px solid #E0E0E0;
  border-radius: 0px;
  overflow: hidden;
  text-align: center;
}

.c1 {
  position: absolute;
  width: 100%;
  top: 100%;
  border: 1px solid #F1F1F1;
  box-sizing: border-box;
  height: auto;
  z-index: 100;
  box-shadow: 0px 2px 20px 0px #29292940;
  border-radius: 6px;
  margin-top: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 12px;
  padding: 12px 16px 12px 16px;
}

.c5 {
  display: inline-block;
  width: 100%;
  border-bottom: 1px #E0E0E0 solid;
}

.c6 {
  margin: 0;
  padding: 0 16px 12px 16px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  white-space: nowrap;
  width: 100%;
  border: none;
  cursor: pointer;
  color: #0056E0;
  border-radius: 6px;
  padding: 8px 16px;
  background: #F1F1F1;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
}

.c3:hover {
  background: #F1F1F1;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 > span:first-of-type {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
  className="c0 c1"
  data-test-id="CARD"
>
  <div
    className="c2"
  >
    <button
      className="c3"
      data-id="keyword-search-view-all-results-button"
      data-test-id="keyword-search-view-all-results-button"
      id="0"
      onClick={[Function]}
      tabIndex={-1}
    >
      <span
        className="c4"
      >
        <span
          title="View all results for "mock""
        >
          View all results for "mock"
        </span>
         (
        10
        )
      </span>
    </button>
    <div
      className="c5"
    />
  </div>
  <ul
    className="c6"
    id="table-search-results"
  >
    <SearchResultItem
      id="1"
      isActive={false}
      item={
        {
          "0": "mockName1",
        }
      }
      onClick={[Function]}
      testId="keyword-search-list-item-button"
    />
    <SearchResultItem
      id="2"
      isActive={false}
      item={
        {
          "0": "mockName2",
          "1": "mockGroup",
        }
      }
      onClick={[Function]}
      testId="keyword-search-list-item-button"
    />
  </ul>
</div>
`;
